Started new three.js project - world-one, working from different turorials

--- a/three.js/building/index.html
+++ b/three.js/building/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1"/>
     <link rel="stylesheet" href="css/style.css"/>
     
-    <title>Just trying to get a basic three.js scene working...
+    <title>Just trying to get a basic three.js scene working.. FOr some reason the same code doesn't work here..don't know why--- gh 
+      maybe it's something to with the cross domain script thing...  
     </title>
   
     <script src="jquery-1.7.2.min.js"></script>
