--- a/three.js/world-one/index.html
+++ b/three.js/world-one/index.html
@@ -9,12 +9,89 @@
 			body { margin: 0; }
 			canvas { width: 100%; height: 100% }
 		</style>
+		 <!-- CDN Link to Three.js -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/87/three.js"></script>
+		<script>
+			// We need 3 things everytime we use Three.js
+
+ renderer.setSize( window.innerWidth, window.innerHeight )
+ // sets renderer background color
+ renderer.setClearColor("#222222")
+ document.body.appendChild( renderer.domElement )
+ camera.position.z = 5
+ 
+ // resize canvas on resize window
+ window.addEventListener( 'resize', () => {y
+     let width = window.innerWidth
+     let height = window.innerHeight
+     renderer.setSize( width, height )
+     camera.mbadtk757174
+     aspect = width / height
+     camera.updateProjectionMatrix()
+ })
+
+//Doors and windows are defined by start co-ords, height, width and base height. Orientation and depth are assumed to be identical to the wall that the door / window is part of.
+
+ // basic cube - left wall
+ var geometry = new THREE.BoxGeometry( 1, 3, 50)
+ var material = new THREE.MeshStandardMaterial( { color: 0xff0051, flatShading: true, metalness: 0, roughness: 1 })
+ var cube = new THREE.Mesh ( geometry, material )
+ 
+ scene.add( cube )
+groundCube.position.set(-2,1,0)
+ //var geometry= new THREE.BoxGeometry(8,8,8)
+ 
+//Back wall
+
+
+ // ground
+var geometry = new THREE.BoxGeometry( 100, 1, 100)
+ var material = new THREE.MeshStandardMaterial( { color: 0x00ff51, flatShading: true, metalness: 0, roughness: 1 })
+ var groundCube = new THREE.Mesh ( geometry, material )
+ scene.add(groundCube)
+ groundCube.position.set(0,-1,0)
+
+ // wireframe cube
+ var geometry = new THREE.BoxGeometry( 2, 2, 2)
+ var material = new THREE.MeshBasicMaterial({color: "#dadada", wireframe: true, transparent: true })
+ var wireframeCube = new THREE.Mesh ( geometry, material )
+ //scene.add( wireframeCube )
+ 
+ // wireframe cube
+ var geometry = new THREE.BoxGeometry( 4, 4, 4)
+ var material = new THREE.MeshBasicMaterial({color: "#dadada", wireframe: true, transparent: true })
+ var wireframeBigCube = new THREE.Mesh ( geometry, material )
+ //scene.add( wireframeBigCube )
+
+ //The doors will be described by location (x,y,z) and height/depth, and consist of two blocks placed in a gap between two walls.
+ 
+// ambient light
+ var ambientLight = new THREE.AmbientLight ( 0xffffff, 0.2)
+ scene.add( ambientLight )
+ 
+ // point light
+ var pointLight = new THREE.PointLight( 0xffffff, 1 ); 
+		
+ //THis function sets up the animation sequence and then calls itself recursively to consistently update the scene...
+ function animate() {
+     requestAnimationFrame( animate )
+     cube.rotation.x += 0.1;
+     cube.rotation.y += 0.1;
+     wireframeCube.rotation.x -= 0.07;
+     wireframeCube.rotation.y -= 0.07;
+     wireframeBigCube.rotation.x += 0.05;
+     wireframeBigCube.rotation.y += 0.05;
+     renderer.render( scene, camera )
+ }
+ //animate()
+ renderer.render( scene, camera )
+//init();
+		</script>
 	</head>
 	<body>
-    <!-- CDN Link to Three.js -->
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/87/three.js"></script>
+   
 		<!--reference your JS file here. Mine looks like below-->
-    <script src="./index.js"></script>
+    <script></script>
 	</body>
 </html>
 
